--- a/config/BUILD.bazel
+++ b/config/BUILD.bazel
@@ -84,6 +84,7 @@ mustache(
     # stdlib = "//stdlib"
 )
 
+## runs merge_json:
 ocaml_cc_config(
     name = "config_json",
     json = "config.initial.json",
