--- a/driver/BUILD.bazel
+++ b/driver/BUILD.bazel
@@ -5,7 +5,7 @@ load("//bzl:rules.bzl",
      "compiler_signature",
 )
 
-load("//config:CONFIG.bzl", "w")
+load("//config:WARNINGS.bzl", "w")
 
 WARNINGS = [w.NAME_OUT_OF_SCOPE] # -40
 MODULE_OPTS = []
