--- a/middle_end/flambda/base_types/BUILD.bazel
+++ b/middle_end/flambda/base_types/BUILD.bazel
@@ -4,15 +4,8 @@ load("//bzl:rules.bzl",
      "compiler_signature",
 )
 
-load("//config:CONFIG.bzl",
-     "OC_COMMON_CFLAGS",
-     "PLATFORM_CFLAGS")
-
-MODULE_OPTS = OC_COMMON_CFLAGS + PLATFORM_CFLAGS
-# + [
-#     "-nostdlib"
-# ]
-SIG_OPTS    = OC_COMMON_CFLAGS + PLATFORM_CFLAGS
+MODULE_OPTS = []
+SIG_OPTS    = []
 
 boot_library(
     name = "base_types",
