--- a/test/BUILD.bazel
+++ b/test/BUILD.bazel
@@ -8,10 +8,12 @@ exports_files(glob(["**"]))
 
 package(default_visibility = ["//visibility:public"])
 
-load("@ocamlcc//bzl:rules.bzl",
-     "ocaml_compiler_r",
-     "ocaml_compilers",
-     "ocamlc_byte")
+load("//test/rules:BUILD_RULES.bzl",
+     # "tocaml_compilers",
+     "t_ocamlc_byte",
+     "t_ocamlopt_byte",
+     "t_ocamlopt_opt",
+     "t_ocamlc_opt")
 
 load("@bazel_skylib//rules:common_settings.bzl",
      "bool_flag", "string_setting")
@@ -20,46 +22,45 @@ bool_flag(name = "verbose", build_setting_default = False,
           visibility = ["//visibility:public"])
 config_setting(name = "verbose?", flag_values = {":verbose": "True"})
 
-################################################################
-## ocaml_compilers is a macro; it expands to: ocamlc_byte,
-## ocamlopt_byte ocamlopt_opt, ocamlc_opt
+OCAMLC_PROLOGUE = select({
+    "//config/ocaml/compiler/libs:archived?": ["//stdlib"],
+    "//conditions:default": []
+}) + [
+    "//compilerlibs:ocamlcommon",
+    "//bytecomp:ocamlbytecomp"
+]
+OCAMLC_BYTE_MAIN = "//driver:Main"
 
-# ocaml_compilers(
-#     name = "ocamlcc",
-#     visibility             = ["//visibility:public"]
-# )
+OCAMLOPT_PROLOGUE = select({
+    "//config/ocaml/compiler/libs:archived?": ["//stdlib"],
+    "//conditions:default": []
+}) + [
+    "//compilerlibs:ocamlcommon",
+    "//asmcomp:ocamloptcomp"
+]
+OCAMLOPT_BYTE_MAIN = "//driver:Optmain"
 
-ocamlc_byte(
-    name = "ocamlc.byte",
-    # stdlib   = "//stdlib",
-    prologue = [
-        "//stdlib",
-        "//compilerlibs:ocamlcommon",
-        "//bytecomp:ocamlbytecomp"
+OCAML_COMPILER_OPTS = select({
+    # ocamlc.byte: ["-compat-32"]
+        "//conditions:default": []
+}) + select({
+    "//platform/target/os:linux?": [
+        "-cclib", "-lm",
+        "-cclib", "-ldl",
+        "-cclib", "-lpthread",
     ],
-    main = "//driver:Main",
-    opts = [ ] + select({
-        # ocamlc.byte: ["-compat-32"]
-        "//conditions:default": []
-    }) + [
-    ] + select({
-        "//platform/target/os:linux?": [
-            "-cclib", "-lm",
-            "-cclib", "-ldl",
-            "-cclib", "-lpthread",
-        ],
-        "//conditions:default": []
-    }),
-    visibility             = ["//visibility:public"]
+    "//conditions:default": []
+})
+
+################################################################
+#t_ocamlc_byte(name = "ocamlc.byte") # as a macro
+t_ocamlc_byte(
+    name       = "ocamlc.byte",
+    prologue   = OCAMLC_PROLOGUE,
+    main       = OCAMLC_BYTE_MAIN,
+    opts       = OCAML_COMPILER_OPTS,
+    visibility = ["//visibility:public"]
 )
-
-
-##TODO: this code is the same as that in //bin except for the compiler
-##labels.  Macroize them. E.g.:
-# ocamlc_byte_runner(
-#     name     = "ocamlc.byte.sh",
-#     compiler = ":ocamlc.byte"
-# )
 
 sh_binary(
     name = "ocamlc.byte.sh",
@@ -84,16 +85,25 @@ sh_binary(
     ]
 )
 
+################################################################
+t_ocamlopt_byte(
+    name = "ocamlopt.byte",
+    prologue = OCAMLOPT_PROLOGUE,
+    main = OCAMLOPT_BYTE_MAIN,
+    opts = OCAML_COMPILER_OPTS,
+    visibility             = ["//visibility:public"]
+)
+
 sh_binary(
-    name = "ocamlopt.opt.sh",
+    name = "ocamlopt.byte.sh",
     srcs = ["ocamlcc.sh"],
     env  = select({
         ":verbose?": {"VERBOSE": "true"},
         "//conditions:default": {"VERBOSE": "false"}
     }),
-    args = ["ocamlopt.opt"],
+    args = ["ocamlopt.byte"],
     data = [
-        ":ocamlopt.opt",
+        ":ocamlopt.byte",
         "@ocamlcc//runtime:asmrun",
         # "@ocamlcc//config/camlheaders",
         "@bazel_tools//tools/cpp:current_cc_toolchain"
@@ -105,4 +115,53 @@ sh_binary(
     toolchains = ["@bazel_tools//tools/cpp:current_cc_toolchain"]
 )
 
+################################################################
+################
+t_ocamlopt_opt(
+    name = "ocamlopt.opt",
+    prologue = [
+        "//stdlib",
+        "//compilerlibs:ocamlcommon",
+        "//bytecomp:ocamlbytecomp"
+    ],
+    main = "//driver:Main",
+    opts = [ ] + select({
+        # ocamlc.byte: ["-compat-32"]
+        "//conditions:default": []
+    }) + [
+    ] + select({
+        "//platform/target/os:linux?": [
+            "-cclib", "-lm",
+            "-cclib", "-ldl",
+            "-cclib", "-lpthread",
+        ],
+        "//conditions:default": []
+    }),
+    visibility             = ["//visibility:public"]
+)
+
+################################################################
+################
+t_ocamlc_opt(
+    name = "ocamlc.opt",
+    prologue = [
+        "//stdlib",
+        "//compilerlibs:ocamlcommon",
+        "//bytecomp:ocamlbytecomp"
+    ],
+    main = "//driver:Main",
+    opts = [ ] + select({
+        # ocamlc.byte: ["-compat-32"]
+        "//conditions:default": []
+    }) + [
+    ] + select({
+        "//platform/target/os:linux?": [
+            "-cclib", "-lm",
+            "-cclib", "-ldl",
+            "-cclib", "-lpthread",
+        ],
+        "//conditions:default": []
+    }),
+    visibility             = ["//visibility:public"]
+)
 
