fix flambda builds; _compilerlibs_archived toggle, exec impl

--- a/asmcomp/BUILD.bazel
+++ b/asmcomp/BUILD.bazel
@@ -833,7 +833,8 @@ build_tool_vm(
     #     "-verbose"
     # ],
     prologue = [
-        "//stdlib:Stdlib",
+        "//stdlib"
+        # "//stdlib:Stdlib",
         # "//stdlib:Primitives",
 
     #     "//stdlib:primitives",
